--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.0",
-    "next": "16.0.4",
+    "next": "^16.1.2",
     "openai": "^6.9.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "eslint": "^9",
